// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nextcloud /> should render Nextcloud 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Nextcloud Configuration
    </h2>
    <p>
      Create an administrator account for Nextcloud.
    </p>
    <form>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Username
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control is-invalid"
            id="1"
            type="text"
            value=""
          />
        </div>
        <div
          class="invalid-feedback"
        >
          Username cannot be empty.
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control is-invalid"
            id="2"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa fa-eye"
            />
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Password cannot be empty.
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Nextcloud /> should render Nextcloud configured 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Nextcloud Configuration
    </h2>
    <p>
      Create an administrator account for Nextcloud.
    </p>
    <div
      class="text-muted text-center"
    >
      <p
        class="mb-2"
      >
        Congratulations!🎉
      </p>
      <p
        class="mb-0"
      >
        You have configured your Nextcloud now you can visit the 
        <a
          href="/nextcloud"
          rel="noopener noreferrer"
          target="_blank"
        >
          site
          <sup>
            <i
              class="fas fa-external-link-alt fa-sm ms-1"
            />
          </sup>
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`<Nextcloud /> should render Nextcloud configuring 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Nextcloud Configuration
    </h2>
    <p>
      Create an administrator account for Nextcloud.
    </p>
    <div
      class="d-flex flex-row justify-content-center align-items-center text-muted"
    >
      <div
        class="spinner-border spinner-border-sm"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
      <div
        class="spinner-text"
      >
        <p
          class="ms-1 mb-0"
        >
          Configuring Nextcloud…
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Nextcloud /> should render error 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<Nextcloud /> should render spinner 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;
